--- a/.github/workflows/gh-pages.deploy.yml
+++ b/.github/workflows/gh-pages.deploy.yml
@@ -38,3 +38,5 @@ jobs:
           repository-name: SUSE/suse.github.io
           branch: main
           folder: out
+          clean-exclude: >
+            suse-open-source-policy.html
