--- a/.github/workflows/gh-pages.deploy.yml
+++ b/.github/workflows/gh-pages.deploy.yml
@@ -3,8 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
-  repository_dispatch:
-    types: [portal_update]
+  workflow_dispatch:
 
 jobs:
   build:
